--- a/nasik/css/trek.css
+++ b/nasik/css/trek.css
@@ -197,11 +197,49 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/brahmagiri\ hills/bh1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
+}
+
+@keyframes slider{
+    20%{ background-image: url(../images/brahmagiri\ hills/bh1.jpg);}
+    25%{ background-image: url(../images/brahmagiri\ hills/bh2.jpg);}
+    45%{ background-image: url(../images/brahmagiri\ hills/bh2.jpg);}
+    50%{ background-image: url(../images/brahmagiri\ hills/bh3.jpg);}
+    70%{ background-image: url(../images/brahmagiri\ hills/bh3.jpg);}
+    75%{ background-image: url(../images/brahmagiri\ hills/bh5.jpg);}
+    95%{ background-image: url(../images/brahmagiri\ hills/bh5.jpg);}
+
+}#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/sula\ vineyards/sv1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/sula\ vineyards/sv1.jpg);}
+    25%{ background-image: url(../images/sula\ vineyards/sv3.jpg);}
+    45%{ background-image: url(../images/sula\ vineyards/sv3.jpg);}
+    50%{ background-image: url(../images/sula\ vineyards/sv4.jpg);}
+    70%{ background-image: url(../images/sula\ vineyards/sv4.jpg);}
+    75%{ background-image: url(../images/sula\ vineyards/sv5.jpg);}
+    95%{ background-image: url(../images/sula\ vineyards/sv5.jpg);}
+
 }
 
 /* reachablity  */
