--- a/pune/css/waterbodies.css
+++ b/pune/css/waterbodies.css
@@ -197,11 +197,50 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/khadakwasla/kd1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/khadakwasla/kd1.jpg);}
+    25%{ background-image: url(../images/khadakwasla/kd2.jpg);}
+    45%{ background-image: url(../images/khadakwasla/kd2.jpg);}
+    50%{ background-image: url(../images/khadakwasla/kd3.jpg);}
+    70%{ background-image: url(../images/khadakwasla/kd3.jpg);}
+    75%{ background-image: url(../images/khadakwasla/kd4.jpg);}
+    95%{ background-image: url(../images/khadakwasla/kd4.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/pashan_lake/pl1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider2 15s infinite ease-in;
+}
+
+@keyframes slider2{
+    20%{ background-image: url(../images/pashan_lake/pl1.jpg);}
+    25%{ background-image: url(../images/pashan_lake/pl2.jpg);}
+    45%{ background-image: url(../images/pashan_lake/pl2.jpg);}
+    50%{ background-image: url(../images/pashan_lake/pl3.JPG);}
+    70%{ background-image: url(../images/pashan_lake/pl3.JPG);}
+    75%{ background-image: url(../images/pashan_lake/pl4.jpg);}
+    95%{ background-image: url(../images/pashan_lake/pl4.jpg);}
+
 }
 
 /* reachablity  */
