--- a/ajanta_ellora/css/trek_zoo.css
+++ b/ajanta_ellora/css/trek_zoo.css
@@ -197,12 +197,52 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/goga\ baba\ hills/g1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/goga\ baba\ hills/g1.jpg);}
+    25%{ background-image: url(../images/goga\ baba\ hills/g2.jpg);}
+    45%{ background-image: url(../images/goga\ baba\ hills/g2.jpg);}
+    50%{ background-image: url(../images/goga\ baba\ hills/g3.jpg);}
+    70%{ background-image: url(../images/goga\ baba\ hills/g3.jpg);}
+    75%{ background-image: url(../images/goga\ baba\ hills/g4.jpg);}
+    95%{ background-image: url(../images/goga\ baba\ hills/g4.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/siddharth\ garden\ and\ zoo/sg1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg1.jpg);}
+    25%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg2.jpg);}
+    45%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg2.jpg);}
+    50%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg3.jpg);}
+    70%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg3.jpg);}
+    75%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg4.jpg);}
+    95%{ background-image: url(../images/siddharth\ garden\ and\ zoo/sg4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
