--- a/lonavala/css/mountains.css
+++ b/lonavala/css/mountains.css
@@ -197,12 +197,52 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/sunil\ celebrity\ wax\ museum/swax1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax1.jpg);}
+    25%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax2.jpg);}
+    45%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax2.jpg);}
+    50%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax3.jpg);}
+    70%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax3.jpg);}
+    75%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax4.jpg);}
+    95%{ background-image: url(../images/sunil\ celebrity\ wax\ museum/swax4.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/lohgad\ fort/lf1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/lohgad\ fort/lf1.jpg);}
+    25%{ background-image: url(../images/lohgad\ fort/lf2.jpg);}
+    45%{ background-image: url(../images/lohgad\ fort/lf2.jpg);}
+    50%{ background-image: url(../images/lohgad\ fort/lf3.jpg);}
+    70%{ background-image: url(../images/lohgad\ fort/lf3.jpg);}
+    75%{ background-image: url(../images/lohgad\ fort/lf4.jpg);}
+    95%{ background-image: url(../images/lohgad\ fort/lf4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
