--- a/mumbai/css/beach.css
+++ b/mumbai/css/beach.css
@@ -197,12 +197,52 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/juhu\ beach/juhu1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/juhu\ beach/juhu1.jpg);}
+    25%{ background-image: url(../images/juhu\ beach/juhu2.jpg);}
+    45%{ background-image: url(../images/juhu\ beach/juhu2.jpg);}
+    50%{ background-image: url(../images/juhu\ beach/juhu3.jpg);}
+    70%{ background-image: url(../images/juhu\ beach/juhu3.jpg);}
+    75%{ background-image: url(../images/juhu\ beach/juhu4.jpg);}
+    95%{ background-image: url(../images/juhu\ beach/juhu4.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/marine\ drive/m1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/marine\ drive/m1.jpg);}
+    25%{ background-image: url(../images/marine\ drive/m2.jpg);}
+    45%{ background-image: url(../images/marine\ drive/m2.jpg);}
+    50%{ background-image: url(../images/marine\ drive/m3.jpg);}
+    70%{ background-image: url(../images/marine\ drive/m3.jpg);}
+    75%{ background-image: url(../images/marine\ drive/m4.jpg);}
+    95%{ background-image: url(../images/marine\ drive/m4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
