--- a/mumbai/css/caves.css
+++ b/mumbai/css/caves.css
@@ -197,12 +197,52 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/elephanta\ caves/ec1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/elephanta\ caves/ec1.jpg);}
+    25%{ background-image: url(../images/elephanta\ caves/ec2.jpg);}
+    45%{ background-image: url(../images/elephanta\ caves/ec2.jpg);}
+    50%{ background-image: url(../images/elephanta\ caves/ec3.jpg);}
+    70%{ background-image: url(../images/elephanta\ caves/ec3.jpg);}
+    75%{ background-image: url(../images/elephanta\ caves/ec5.jpg);}
+    95%{ background-image: url(../images/elephanta\ caves/ec5.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/kanheri\ caves/kc1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/kanheri\ caves/kc1.jpg);}
+    25%{ background-image: url(../images/kanheri\ caves/kc2.jpg);}
+    45%{ background-image: url(../images/kanheri\ caves/kc2.jpg);}
+    50%{ background-image: url(../images/kanheri\ caves/kc3.jpg);}
+    70%{ background-image: url(../images/kanheri\ caves/kc3.jpg);}
+    75%{ background-image: url(../images/kanheri\ caves/kc4.jpg);}
+    95%{ background-image: url(../images/kanheri\ caves/kc4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
