--- a/mumbai/css/zoo_and_garderns.css
+++ b/mumbai/css/zoo_and_garderns.css
@@ -197,12 +197,52 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
 }
+
+@keyframes slider{
+    20%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo1.jpg);}
+    25%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo4.jpg);}
+    45%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo4.jpg);}
+    50%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo3.jpg);}
+    70%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo3.jpg);}
+    75%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo5.jpg);}
+    95%{ background-image: url(../images/Mumbai\ Zoo\ \(Veermata\ Jijabai\ Udyan\)/zoo5.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/hanging\ garden/hg1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/hanging\ garden/hg1.jpg);}
+    25%{ background-image: url(../images/hanging\ garden/hg2.jpg);}
+    45%{ background-image: url(../images/hanging\ garden/hg2.jpg);}
+    50%{ background-image: url(../images/hanging\ garden/hg3.jpg);}
+    70%{ background-image: url(../images/hanging\ garden/hg3.jpg);}
+    75%{ background-image: url(../images/hanging\ garden/hg4.jpg);}
+    95%{ background-image: url(../images/hanging\ garden/hg4.jpg);}
+
+}
+
 
 /* reachablity  */
 /* ***************************************************************** */
