--- a/nasik/css/waterfall.css
+++ b/nasik/css/waterfall.css
@@ -197,11 +197,50 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/Dugarwadi\ hills/dh1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
+}
+
+@keyframes slider{
+    20%{ background-image: url(../images/Dugarwadi\ hills/dh1.jpg);}
+    25%{ background-image: url(../images/Dugarwadi\ hills/dh2.jpg);}
+    45%{ background-image: url(../images/Dugarwadi\ hills/dh2.jpg);}
+    50%{ background-image: url(../images/Dugarwadi\ hills/dh3.jpg);}
+    70%{ background-image: url(../images/Dugarwadi\ hills/dh3.jpg);}
+    75%{ background-image: url(../images/Dugarwadi\ hills/dh4.jpg);}
+    95%{ background-image: url(../images/Dugarwadi\ hills/dh4.jpg);}
+
+}
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/someshwar\ dudhsagar\ waterfall/df1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df1.jpg);}
+    25%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df2.jpg);}
+    45%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df2.jpg);}
+    50%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df3.jpg);}
+    70%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df3.jpg);}
+    75%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df4.jpg);}
+    95%{ background-image: url(../images/someshwar\ dudhsagar\ waterfall/df4.jpg);}
+
 }
 
 /* reachablity  */
