--- a/pune/css/mountains.css
+++ b/pune/css/mountains.css
@@ -219,6 +219,29 @@ nav {
     95%{ background-image: url(../images/shaniwar_wada/sw4.jpg);}
 
 }
+#img1{
+    display: flex;
+    background-position: center;
+    height: 500px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+    background-image: url(../images/aga\ khan\ palace/akp1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider1 15s infinite ease-in;
+}
+
+@keyframes slider1{
+    20%{ background-image: url(../images/aga\ khan\ palace/akp1.jpg);}
+    25%{ background-image: url(../images/aga\ khan\ palace/akp2.jpg);}
+    45%{ background-image: url(../images/aga\ khan\ palace/akp2.jpg);}
+    50%{ background-image: url(../images/aga\ khan\ palace/akp3.jpg);}
+    70%{ background-image: url(../images/aga\ khan\ palace/akp3.jpg);}
+    75%{ background-image: url(../images/aga\ khan\ palace/akp4.jpg);}
+    95%{ background-image: url(../images/aga\ khan\ palace/akp4.jpg);}
+
+}
 
 /* reachablity  */
 /* ***************************************************************** */
